Remove "canonical" thunks in favor of reabstraction thunks.

There are instances of currying that require full reabstraction,
such as when partially-applying a concrete override of a generic
class method.

Fixes rdar://45671537 and SR-4425.