lib/SILGen/SILGenFunction.h
@@ -668,12 +668,6 @@ public:
                                CanAnyFunctionType blockTy,
                                CanSILFunctionType loweredBlockTy);
 
-  /// Given a non-canonical function type, create a thunk for the function's
-  /// canonical type.
-  ManagedValue emitCanonicalFunctionThunk(SILLocation loc, ManagedValue fn,
-                                          CanSILFunctionType nonCanonicalTy,
-                                          CanSILFunctionType canonicalTy);
-
   /// Thunk with the signature of a base class method calling a derived class
   /// method.
   ///
